# bbn-experiment

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml  deploy.yml
bbn_viz/: __init__.py  __main__.py
bbn_viz/_assets/: app.css  app.js
public/: example-bbn.json  index.html
src/: App.css  App.js  bbn-viewer.ts  detail-panel.ts  example-bbn.ts  exampleBbn.js  graph-panel.ts  index.css  main.ts  styles.css  types.ts
src/components/: DetailPanel.js  DetailViewPanel.js  GraphPanel.js  JsonEditorPanel.js  JsonExamplePanel.js
